# deepfake-detection

./: .env.example  .gitignore  GRADER_CHECKLIST.txt  GRADING.md  GRADING_GUIDE.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_ROADMAP.md  README.md  SUBMISSION_READY.md  demo.sh  detect.py  pyproject.toml  requirements.txt
academic/: LOCAL_AGENT_MIGRATION.md  README.md  verify_requirements.py
agents/deepfake_detector_v1.0/: README.md  agent_definition.yaml  detection_rules.yaml  system_prompt.md
data/videos/fake/: README.md
data/videos/real/: README.md
docs/: ARCHITECTURE.md  BUILDING_BLOCKS.md  COST_ANALYSIS.md  PLUGIN_DEVELOPMENT.md  PRD.md  PROMPT_ENGINEERING_LOG.md  QUALITY_CHARACTERISTICS.md  TECHNICAL_VERIFICATION_CHECKLIST.md  TESTING.md  deepfake_generation.md  detection_agent.md  evaluation.md
docs/_archived/: EVALUATION_SETUP.md  PHASE2_COMPLETION_GUIDE.md  QUICKSTART.md  STATUS.md  run_evaluation.sh  test_imports.py
notebooks/: results_analysis.ipynb
plugins/: __init__.py  emotion_sampler.py  scene_sampler.py
prompts/: frame_analysis.txt  synthesis.txt  temporal_analysis.txt
results/: local_deepfake_analysis.json  local_deepfake_report.txt  local_real_analysis.json  local_real_report.txt
src/: __init__.py  detector.py  llm_analyzer.py  local_agent.py  output_formatter.py  parallel_processor.py  plugin_system.py  video_processor.py
tests/: __init__.py  test_detector.py  test_llm_analyzer.py  test_local_agent.py  test_output_formatter.py  test_parallel_processor.py  test_plugin_system.py  test_video_processor.py
